tests/invalid/invalid-001.inox
Module Invalid001

Main() :
    var X := 10
    X := "abc"
;
